# smart-resume-screener

./: .gitignore  README.md  docker-compose.yml  main_process_data.py  requirements_core.txt
backend/: .dockerignore  .env.docker  .flaskenv  Dockerfile  celery_worker.py  config.py  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  extensions.py  models.py  schemas.py  tasks.py
backend/app/routes/: __init__.py  jobs.py  resumes.py
backend/app/utils/: __init__.py  nlp.py  parsers.py
backend/migrations/versions/: 5041d2fa38c3_create_jobs_and_resumes_tables.py  d0a74cedb9b2_add_required_years_column_to_jobs_table.py
data/job_descriptions/: sample_jd.txt
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/api/: apiService.js
frontend/src/components/: FlowLinesBackground.jsx  PageWrapper.jsx  R3FBackground.jsx  ResumeList.jsx  ResumeUpload.jsx  animatedbackground.css  animatedbackground.jsx
frontend/src/pages/: CreateJobPage.jsx  HomePage.jsx  JobDetailPage.jsx  JobListPage.jsx
frontend/src/styles/: commonStyles.js
