[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
packages = [{include = "app"}]
authors = ["Shubham Kumavat <shubhamkumavat639@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
flask = "3.1.1"
flask-sqlalchemy = "3.1.1"
flask-cors = "6.0.1"
psycopg2-binary = "*"
python-dotenv = "1.1.1"
gunicorn = "*"
celery = {extras = ["redis"], version = "^5.5.3"}
spacy = "3.8.7"
sentence-transformers = "5.1.0"
python-docx = "*"
PyPDF2 = "3.0.1"
gensim = "<4.0"
cython = "^3.1.2"
gevent = "^25.5.1"
flask-migrate = "4.1.0"
alembic = "1.16.4"
dateparser = "1.2.2"
docx = "0.2.4"
flask-marshmallow = "1.3.0"
marshmallow = "4.0.0"
nltk = "3.9.1"
scikit-learn = "1.7.1"
sqlalchemy = "2.0.42"
textract = "1.6.5"
torch = "2.8.0"
werkzeug = "3.1.3"
marshmallow-sqlalchemy = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"